# rust-rpi-rgb-led-bindings

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
src/: .led_matrix.rs.swp  led_matrix.rs  led_matrix_c.rs  lib.rs  main.rs
src/led_matrix/: led_matrix_c.rs
